windows build file works